--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-REACT_APP_VERSION = 1.0.0
+REACT_APP_VERSION = 1.1.0
 
 REACT_APP_WORKHOUR_STORAGE_KEY = cc.paperplane.workhour.workhour
+
+REACT_APP_CONFIG_STORAGE_KEY = cc.paperplane.workhour.config
+
+REACT_APP_BACKGROUND_IMAGE_COUNT = 4
