--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-REACT_APP_VERSION = 1.1.0
-
-REACT_APP_WORKHOUR_STORAGE_KEY = cc.paperplane.workhour.workhour
+REACT_APP_VERSION = 1.2.0
 
 REACT_APP_CONFIG_STORAGE_KEY = cc.paperplane.workhour.config
 
-REACT_APP_BACKGROUND_IMAGE_COUNT = 4
+REACT_APP_WORKHOUR_STORAGE_KEY = cc.paperplane.workhour.workhour
+
+REACT_APP_WEEKEND_STORAGE_KEY = cc.paperplane.workhour.weekend
+
+REACT_APP_SALARYDAY_STORAGE_KEY = cc.paperplane.workhour.salaryday
+
+REACT_APP_BACKGROUND_IMAGE_COUNT = 8
