--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ steps:
       - name: www
         path: /var/www
     commands:
-      - cp -rf ./dist/* /var/www/offwork/
+      - cp -rf ./build/* /var/www/offwork/
 
 volumes:
   - name: www
