--- a/.drone.yml
+++ b/.drone.yml
@@ -14,23 +14,27 @@ steps:
       - yarn config set registry https://registry.npm.taobao.org
       - yarn
       - yarn build
+    environment:
+      CI: false
+      GENERATE_SOURCEMAP: false
 
   - name: deploy
     image: node:14
     volumes:
-      - name: www
-        path: /var/www
+      - name: webroot
+        path: /webroot
     commands:
-      - mkdir -p /var/www/offwork/
-      - cp -rf ./build/* /var/www/offwork/
+      - mkdir -p /webroot/offwork/
+      - rm -rf /webroot/offwork/**/*.*
+      - cp -rf ./build/* /webroot/offwork/
 
 volumes:
-  - name: www
+  - name: webroot
     host:
-      path: /var/www
+      path: /home/ubuntu/www
   - name: npmcache
     host:
-      path: /data/npmcache
+      path: /home/ubuntu/npmcache
 
 trigger:
   branch:
