--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,7 @@ steps:
         path: /webroot
     commands:
       - mkdir -p /webroot/offwork/
-      - rm -rf /webroot/offwork/**/*.*
+      - rm -rf /webroot/offwork/*
       - cp -rf ./build/* /webroot/offwork/
 
 volumes:
