--- a/.drone.yml
+++ b/.drone.yml
@@ -8,8 +8,8 @@ steps:
   - name: build
     image: node:14
     volumes:
-      - name: npmcache
-        path: /usr/local/share/.cache/yarn
+      - name: yarncache
+        path: /root/.yarn
     commands:
       - yarn config set registry https://registry.npmmirror.com
       - yarn
@@ -31,10 +31,10 @@ steps:
 volumes:
   - name: webroot
     host:
-      path: /home/ubuntu/www
-  - name: npmcache
+      path: /root/www
+  - name: yarncache
     host:
-      path: /home/ubuntu/npmcache
+      path: /root/.yarncache
 
 trigger:
   branch:
