--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "offworkhours",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://paperplane.cc/offwork",
+  "homepage": "https://offwork.paperplane.cc/",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@emotion/core": "^11.0.0",
