--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
     image: node:14
     volumes:
       - name: yarncache
-        path: /root/.yarn
+        path: /root/.cache/yarn
     commands:
       - yarn config set registry https://registry.npmmirror.com
       - yarn
