chore(drone): 更新 CI/CD 中的 yarn 缓存目录

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
     image: node:14
     volumes:
       - name: yarncache
-        path: /root/.cache/yarn
+        path: /home/node/.cache/yarn
     commands:
       - yarn config set registry https://registry.npmmirror.com
       - yarn
