chore(drone): CI/CD 配置更新，现在不再使用淘宝 npm

--- a/.drone.yml
+++ b/.drone.yml
@@ -11,8 +11,7 @@ steps:
       - name: yarncache
         path: /home/node/.cache/yarn
     commands:
-      - yarn config set registry https://registry.npmmirror.com
-      - yarn
+      - yarn --registry=https://registry.yarnpkg.com
       - yarn build
     environment:
       CI: false
