chore(ci): 现在支持将资源上传到 CDN

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ workspace:
 
 steps:
   - name: build
-    image: node:14
+    image: node:14.21.3
     volumes:
       - name: yarncache
         path: /home/node/.cache/yarn
@@ -16,16 +16,20 @@ steps:
     environment:
       CI: false
       GENERATE_SOURCEMAP: false
+      COS_SECRET_ID:
+        from_secret: COS_SECRET_ID
+      COS_SECRET_KEY:
+        from_secret: COS_SECRET_KEY
 
   - name: deploy
-    image: node:14
+    image: ubuntu:22.04
     volumes:
       - name: webroot
         path: /webroot
     commands:
       - mkdir -p /webroot/offwork/
       - rm -rf /webroot/offwork/*
-      - cp -rf ./build/* /webroot/offwork/
+      - cp -rf ./dist/* /webroot/offwork/
 
 volumes:
   - name: webroot
