--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "date-fns": "^2.19.0",
+    "html-webpack-tags-plugin": "^3.0.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.2.1",
     "rc-picker": "^2.5.10",
     "react": "^17.0.1",
@@ -32,7 +34,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack-s3-plugin": "^1.2.0-rc.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
