--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://offwork.paperplane.cc/",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@babel/core": "7.16.0",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
@@ -20,10 +21,13 @@
     "ahooks": "^2.10.0",
     "antd": "^4.12.2",
     "axios": "^0.21.1",
+    "babel-plugin-emotion": "11.0.0",
     "babel-plugin-import": "^1.13.3",
+    "cross-env": "7.0.3",
     "customize-cra": "^1.0.0",
     "date-fns": "^2.19.0",
     "html-webpack-tags-plugin": "^3.0.2",
+    "less-loader": "6.2.0",
     "lodash": "^4.17.21",
     "prettier": "^2.2.1",
     "rc-picker": "^2.5.10",
@@ -33,15 +37,16 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "typescript": "^4.1.3",
-    "web-vitals": "^1.0.1",
-    "webpack-s3-plugin": "^1.2.0-rc.0"
+    "typescript": "~4.4.4",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "preinstall": "npx only-allow pnpm",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-app-rewired start",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-app-rewired start",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-app-rewired build",
+    "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-app-rewired test",
+    "eject": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -61,8 +66,16 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "babel-plugin-emotion": "^11.0.0",
-    "less-loader": "^6.2.0"
+  "resolutions": {
+    "@babel/core": "^7.16.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "aws-sdk",
+      "core-js",
+      "core-js-pure",
+      "ejs",
+      "es5-ext"
+    ]
   }
 }
